# Allegro5Droid

./: CMakeLists.txt  notes.txt
data/: config.ini  sharedDefines.h
data/scripts/: english.sc  german.sc  gui.sc  italian.sc  language.sc  particles.sc  resources.sc  transfer.sc
hdr/game/: gam_bullet.h  gam_database.h  gam_doors.h  gam_droidAI.h  gam_droidAIFlee.h  gam_droidAIHealth.h  gam_droidAIPatrol.h  gam_droidAIResume.h  gam_droidAIShoot.h  gam_droids.h  gam_game.h  gam_healing.h  gam_hud.h  gam_lifts.h  gam_lineOfSight.h  gam_particles.h  gam_pathFind.h  gam_pauseMode.h  gam_physicActions.h  gam_physicsCollisions.h  gam_player.h  gam_render.h  gam_terminal.h  gam_transfer.h  gam_transferDroidAI.h  gam_transferPlayer.h  gam_transferRender.h
hdr/gui/: gui_button.h  gui_checkBox.h  gui_database.h  gui_deckView.h  gui_dialogBox.h  gui_image.h  gui_label.h  gui_main.h  gui_render.h  gui_scrollBox.h  gui_sideView.h  gui_slider.h  gui_terminal.h  gui_text.h  gui_textBox.h
hdr/io/: io_console.h  io_fileSystem.h  io_keyboard.h  io_logFile.h  io_resourceImage.h  io_resourceLevel.h  io_resourceSprite.h  io_resources.h
hdr/system/: sys_audio.h  sys_configFile.h  sys_eventsEngine.h  sys_font.h  sys_gameEvents.h  sys_gameFrameRender.h  sys_gameFrameUpdate.h  sys_init.h  sys_main.h  sys_physics.h  sys_scriptConfig.h  sys_scriptEngine.h  sys_scriptFunctions.h  sys_shutdown.h  sys_timerFunctions.h  sys_util.h  sys_wrapper.h
src/game/: gam_bullet.cpp  gam_database.cpp  gam_doors.cpp  gam_droidAI.cpp  gam_droidAIFlee.cpp  gam_droidAIHealth.cpp  gam_droidAIPatrol.cpp  gam_droidAIResume.cpp  gam_droidAIShoot.cpp  gam_droids.cpp  gam_game.cpp  gam_healing.cpp  gam_hud.cpp  gam_lifts.cpp  gam_lineOfSight.cpp  gam_particles.cpp  gam_pathFind.cpp  gam_pauseMode.cpp  gam_physicActions.cpp  gam_physicsCollisions.cpp  gam_player.cpp  gam_render.cpp  gam_terminal.cpp  gam_transfer.cpp  gam_transferDroidAI.cpp  gam_transferPlayer.cpp  gam_transferRender.cpp
src/gui/: gui_button.cpp  gui_checkBox.cpp  gui_database.cpp  gui_deckView.cpp  gui_dialogBox.cpp  gui_image.cpp  gui_label.cpp  gui_main.cpp  gui_render.cpp  gui_scrollBox.cpp  gui_sideView.cpp  gui_slider.cpp  gui_terminal.cpp  gui_text.cpp  gui_textBox.cpp
src/io/: io_console.cpp  io_fileSystem.cpp  io_keyboard.cpp  io_logFile.cpp  io_resourceImage.cpp  io_resourceLevel.cpp  io_resourceSprite.cpp  io_resources.cpp
src/system/: sys_audio.cpp  sys_configFile.cpp  sys_eventsEngine.cpp  sys_font.cpp  sys_gameEvents.cpp  sys_gameFrameRender.cpp  sys_gameFrameUpdate.cpp  sys_init.cpp  sys_main.cpp  sys_physics.cpp  sys_scriptConfig.cpp  sys_scriptEngine.cpp  sys_scriptFunctions.cpp  sys_shutdown.cpp  sys_timerFunctions.cpp  sys_util.cpp  sys_wrapper.cpp
